--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": ">=5.6",
         "ext-curl": "*"
     },
+    "version": "0.1.1",
     "license": "GPL-3.0",
     "authors": [
         {
