--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-curl": "*"
     },
     "version": "0.1.1",
+    "minimum-stability": "dev",
     "license": "GPL-3.0",
     "authors": [
         {
