--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "GPL-3.0",
     "autoload": {
         "psr-0" : {
-            "Postradar\\Api\\Sdk" : "src"
+            "Postradar\\Api\\Sdk" : "lib"
         }
     },
     "authors": [
