--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,18 @@
     "description": "postradar.ru API client",
     "require": {
         "php": ">=5.6",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "rollbar/rollbar": "dev-master"
+    },
+    "require-dev": {
+        "phpdocumentor/reflection-docblock": "^3.1"
     },
     "version": "1.0.0",
     "minimum-stability": "dev",
     "license": "GPL-3.0",
     "autoload": {
         "psr-0" : {
-            "Postradar\\Api\\Sdk" : "lib"
+            "PostRadar\\": "src/"
         }
     },
     "authors": [
