--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require-dev": {
         "phpdocumentor/reflection-docblock": "^3.1"
     },
-    "version": "1.0.0",
+    "version": "1.0.1",
     "minimum-stability": "dev",
     "license": "GPL-3.0",
     "autoload": {
@@ -19,8 +19,8 @@
     },
     "authors": [
         {
-            "name": "Anton Novopashin",
-            "email": "antonfromkrsk@gmail.com"
+            "name": "Alex Morbo",
+            "email": "alex@morbo.ru"
         }
     ]
 }
