--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "postradar.ru API client",
     "require": {
         "php": ">=5.6",
-        "ext-curl": "*",
+        "ext-curl": "*"
     },
     "version": "1.0.2",
     "minimum-stability": "dev",
